2004-03-02  Terry <tbiggs@users.sf.net>

	* added main/display.cc and main/display.hh
	* changed main/sword.c to main/sword.cc
	* completely reworked gnome2/gbs.c


2004-02-26  Terry <tbiggs@users.sf.net>

	* added attribute search to search dialog 
	  search for Strongs numbers, morph tags and footnotes.
	  Requires sword cvs (1.5.8).

2004-02-25  Terry <tbiggs@users.sf.net>

	* reworked main/lists.c
	
	
2004-02-21  Terry <tbiggs@users.sf.net>

	* completely reworked gnome2/dictlex.c


2004-02-19  Terry <tbiggs@users.sf.net>

	* completely reworked gnome2/commentary.c
	

2004-02-12  Terry <tbiggs@users.sf.net>

	* add sword filters to /backend until the changes are added to the SWORD
	  project filters.
	* completely reworked gnome2/bibletext.c
	* added files gnome2/url.c and gui/url.h
	* moved url handler to gnome2/url.c
	

2004-02-07  Terry <tbiggs@users.sf.net>

	* added sword url handler to gnome2/utilities.c
	  pass uri in the form of sword://KJV/1John5:8 
	  to the command line.


2004-02-04  Terry <tbiggs@users.sf.net>

	* added tabbed browsing option to preferences dialog
	

2004-02-03  Moses <m-mcknight@users.sf.net>

	* started work on tabbed browsing
	* added gnome2/tabbed_browser.c and gui/tabbed_browser.h


2004-01-20  Terry <tbiggs@users.sf.net>

	* added a 'Sources' item to the module manager - for adding and removing
	  remote sources. (will only add at the moment)
	  

2004-01-15  Moses <m-mcknight@users.sf.net>

	* added a setting to remember the dimensions of the search sidebar


2004-01-14  Andy <andyp@users.sf.net>

	* updated spec file to fix build for users and support the renaming of
	  the package to gnomesword. We now obsolete gnomesword2 (weird but 
	  hopefully it will hold up ok).
	  

2004-01-13  Terry <tbiggs@users.sf.net>

	* major changes to rename package to gnomesword (was gnomesword2).
	  Users of gnomesword2 CVS builds (or who have built from source) should
	  do a 'make uninstall' from their old tree before updating to avoid